<resources>
    <string name="app_name">ToDo</string>
    <string name="priority_mark">!</string>
    <string name="no_items">No items!</string>
    <string name="no_items_hint">Use the button below to add an item to your list</string>
    <string name="hint_title">Title</string>
    <string name="hint_description">Description (optional)</string>
    // Priority
    <string name="priority_low">Low</string>
    <string name="priority_medium">Medium</string>
    <string name="priority_high">High</string>
    // Buttons
    <string name="btn_save">Save</string>
    <string name="btn_update">Update</string>
    // Menu
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="priority_label">Priority</string>
    <string name="sort">Sort</string>
    <string name="menu_customization">Customization</string>
    <string name="sort_order">Sort order</string>
</resources>